@@ -2,93 +2,96 @@
 
 A Java-based desktop application developed using OOP and JavaFX to manage café operations. Features include menu display, order placement, bill calculation, and basic UI interactions for café staff and customers. Designed as part of my Object-Oriented Programming coursework.
 
-\# ☕ Cafe Management System – JavaFX
+---
 
+## 👩‍💻 Developed By
 
-
-\## Overview
-
-The \*\*Cafe Management System\*\* is a user-friendly desktop application built with JavaFX. It helps cafe staff and customers efficiently manage orders, calculate bills, and perform quick calculations—all in a single, intuitive interface.
-
-
+- Maham Wazir
+- Alishba Waheed
+- Amna Manal
+- Barera Yasmeen
 
 ---
 
+## ✨ Features
 
-
-\## 👩‍💻 Developed By
-
-\- Maham Wazir  
-
-\- Alishba Waheed  
-
-\- Amna Manal  
-
-\- Barera Yasmeen  
-
-
+- **Tabbed Interface:** Menu, Place Order, Calculator
+- **Dynamic Menu Display:** View all items with prices
+- **Simple Order Placement:** Select items and quantities easily
+- **Live Total Calculation:** Bill updates in real time
+- **Built-in Calculator:** Quick math for convenience
+- **Modern, Clean UI:** Easy to use for everyone
 
 ---
 
+## 📸 Screenshots
 
-
-\## ✨ Features
-
-\- \*\*Tabbed Interface:\*\* Menu, Place Order, Calculator  
-
-\- \*\*Dynamic Menu Display:\*\* View all items with prices  
-
-\- \*\*Simple Order Placement:\*\* Select items and quantities easily  
-
-\- \*\*Live Total Calculation:\*\* Bill updates in real time  
-
-\- \*\*Built-in Calculator:\*\* Quick math for convenience  
-
-\- \*\*Modern, Clean UI:\*\* Easy to use for everyone  
-
-
+|                                         Menu Tab                                         |                                      Place Order Tab                                      |                                      Calculator Tab                                      |
+| :--------------------------------------------------------------------------------------: | :---------------------------------------------------------------------------------------: | :--------------------------------------------------------------------------------------: |
+| ![Menu](https://github.com/user-attachments/assets/ebf7f2a7-ec17-41ec-a617-2190d530cdf5) | ![Order](https://github.com/user-attachments/assets/95be0f0e-ddc0-4eee-9423-5331f0dabe7d) | ![Calc](https://github.com/user-attachments/assets/53cccc92-cee8-4305-8614-4d94cb257a3b) |
 
 ---
 
+## 🚀 Getting Started
 
+### Prerequisites
 
-\## 📸 Screenshots
+- Java **24** or newer ([Download Java](https://www.oracle.com/java/technologies/downloads/))
+- [JavaFX SDK](https://gluonhq.com/products/javafx/)
+- **IntelliJ IDEA** or Visual Studio Code (Recommended)
 
-| Menu Tab | Place Order Tab | Calculator Tab |
+### How to Run
 
-| :------: | :-------------: | :------------: |
-
-| !\[Menu](https://github.com/user-attachments/assets/ebf7f2a7-ec17-41ec-a617-2190d530cdf5) | !\[Order](https://github.com/user-attachments/assets/95be0f0e-ddc0-4eee-9423-5331f0dabe7d) | !\[Calc](https://github.com/user-attachments/assets/53cccc92-cee8-4305-8614-4d94cb257a3b) |
-
-
+1. **Clone this repository:**
+   ```bash
+   git clone https://github.com/barer12357/cafe-management-system.git
+   ```
+2. **Open in Vs Code:**
+   - Go to `File > Open` and select the `cafe-management-system` folder.
+3. **Set up JavaFX:**
+   - Add JavaFX SDK to Project Structure > Libraries.
+   - Set VM options (e.g.):
+     ```
+     --module-path /path/to/javafx-sdk-XX/lib --add-modules javafx.controls,javafx.fxml
+     ```
+4. **Run the App:**
+   - Right-click `CafeManagementSystemFX.java` and choose **Run**.
 
 ---
 
+## 🗂️ Project Structure
 
+```
+cafeProject/
+├── src/
+│   └── main/
+│       ├── java/
+│       │   └── com/
+│       │       └── cafe/
+│       │           ├── CafeManagementSystemFX.java
+│       │           ├── controller/
+│       │           ├── model/
+│       │           └── view/
+│       └── resources/
+│           ├── images/
+│           └── styles/
+├── README.md
+├── .gitignore
+└── [Other project files]
+```
 
-\## 🚀 Getting Started
+---
 
+## 💡 Usage
 
+- **Menu Tab:** Browse items and prices.
+- **Place Order Tab:** Select items, set quantity, see summary and total.
+- **Calculator Tab:** Perform arithmetic as needed.
 
-\### Prerequisites
+---
 
-\- Java \*\*24\*\* or newer (\[Download Java](https://www.oracle.com/java/technologies/downloads/))
+## 🛠️ Technologies Used
 
-\- \[JavaFX SDK](https://gluonhq.com/products/javafx/)
-
-\- \*\*IntelliJ IDEA\*\* or Visual Studio Code (Recommended)
-
-
-
-\### How to Run
-
-
-
-1\. \*\*Clone this repository:\*\*
-
-&nbsp;  ```bash
-
-&nbsp;  git clone https://github.com/alishbawaheed/cafe-managementsystem.git
-
-
-
+- Java 24
+- JavaFX
+- Vs Code
